Change presentation title.

--- a/prez/slides.tex
+++ b/prez/slides.tex
@@ -13,17 +13,19 @@
 
 \begin{document}
 
-\begin{frame}[c]{} % Justin
+\begin{frame}[c]{} % Stephen
 
 \begin{center}
 \Large
-Exploring the Impact of Social Network Density\\and Agent Openness on Societal Polarization
+The Impact of Social Network Density,\\Agent Openness, and Cross-Issue
+Influence\\on Societal Polarization
 
 \footnotesize
 \vspace{.3in}
 CSS 2021 --- Santa Fe, New Mexico (sorta)\\
 \vspace{.1in}
-Justin Mittereder, Robert S.~W.~Carroll, Brandon Frulla, Stephen Davies\\
+\textbf{Justin Mittereder}, Robert Carroll, Brandon Frulla,
+\textbf{Stephen Davies}\\
 \scriptsize
 \smallskip
 Dept of Computer Science\\
@@ -566,15 +568,17 @@ phenomenon. We need voices from more buckets!
 
 \begin{center}
 \Large
-Exploring the Impact of Social Network Density\\and Agent Openness on Societal Polarization
+The Impact of Social Network Density,\\Agent Openness, and Cross-Issue
+Influence\\on Societal Polarization
 
 \footnotesize
 \vspace{.3in}
 CSS 2021 --- Santa Fe, New Mexico (sorta)\\
 \vspace{.1in}
-Justin Mittereder, Robert S.~W.~Carroll, Brandon Frulla, Stephen Davies\\
-\smallskip
+\textbf{Justin Mittereder}, Robert Carroll, Brandon Frulla,
+\textbf{Stephen Davies}\\
 \scriptsize
+\smallskip
 Dept of Computer Science\\
 University of Mary Washington\\
 Fredericksburg, Virginia, USA\\
