updated AssortOpenness Plot

--- a/prez/slides.tex
+++ b/prez/slides.tex
@@ -137,12 +137,10 @@ What does this actually mean?
 % Take your time here, and explain who the blue guy is and who the grey guy is
 % and what the 0-1 number line means.
 
-% Show one number line and two peeps
 \begin{figure}
 	\includegraphics[width=0.65\textwidth]{images/BCNoInfluence.png}
 	\hfill
 	\includegraphics[width=0.65\textwidth]{images/BCPositiveInfluence.png}
-	%TODO: add captions
 \end{figure}
 
 
@@ -162,7 +160,6 @@ What does this actually mean?
 
 \begin{frame}[c]{Results: Assortativity and Network Density}  % Justin
 
-% TODO: Justin: add dotted line at zero (maybe)
 % Slow down, and make this point slower.
 % Walk them through what the axes are.
 
@@ -328,7 +325,7 @@ it.
 
 \end{frame}
 
-\begin{frame}[c]{Cross-Issue Influence (Positive)}  % Justin
+\begin{frame}[c]{Cross-Issue Influence (Positive)}  % Stephen
 
 % Show two number line and two peeps, with an attraction due to openness
 We define \textbf{Cross-Issue Influence} (CI2) as the effect that a person's
@@ -343,7 +340,7 @@ disagreement) on a different issue.
 \end{frame}
 
 
-\begin{frame}[c]{Cross-Issue Influence (Negative)}  % Justin
+\begin{frame}[c]{Cross-Issue Influence (Negative)}  % Stephen
 
 % Show two number line and two peeps, with a repulsion due to disgust
 
