Add description to assortOpenness plot.

--- a/prez/slides.tex
+++ b/prez/slides.tex
@@ -206,6 +206,8 @@ Fewer (meaningful) social connections = higher polarization BUT only at the low 
 
 \begin{center}
 \includegraphics[width=0.9\textwidth]{images/AssortOpenness.png}
+\small
+Paradoxically, lower levels of openness \textit{decreased} polarization.
 \end{center}
 
 \end{frame}
