Add github repo.

--- a/prez/slides.tex
+++ b/prez/slides.tex
@@ -35,6 +35,9 @@ CSS 2021 --- Santa Fe, New Mexico (sorta)\\
 Dept of Computer Science\\
 University of Mary Washington\\
 Fredericksburg, Virginia, USA\\
+\bigskip
+\bigskip
+\texttt{https://github.com/jmittere/Peacemakers}
 \end{center}
 
 \end{frame}
@@ -602,6 +605,9 @@ CSS 2021 --- Santa Fe, New Mexico (sorta)\\
 Dept of Computer Science\\
 University of Mary Washington\\
 Fredericksburg, Virginia, USA\\
+\bigskip
+\bigskip
+\texttt{https://github.com/jmittere/Peacemakers}
 \end{center}
 
 \end{frame}
